<resources>
    <string name="app_name">PM-combustivel</string>
    <string name="app_title">Cost-bennefit Fuel Calculator</string>
    <string name="author">Author: André Lamego</string>
    <string name="author_ra" translatable="false">RA: 1110482412023</string>

    <string name="tfGas">Gas price</string>
    <string name="tfEthanol">Ethanol price</string>
    <string name="btnVerify">Verify</string>
    <string name="tlResult">The best option is:</string>
    <string name="resultGas">Gas</string>
    <string name="resultEthanol">Ethanol</string>
</resources>